<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="1.0">



        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px">



            <EditText
                android:id="@+id/register_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_edit_account"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignTop="@+id/register_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/register_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignRight="@+id/register_edit_account"
                android:layout_below="@+id/register_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/register_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />
            <EditText
                android:id="@+id/register_accountID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_below="@+id/TextView02"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputuAccIDHint"
                android:inputType="number"
                android:maxLength="18"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_accountID"
                android:layout_alignRight="@+id/TextView02"
                android:layout_alignTop="@+id/register_accountID"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strUserAccountIDInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/register_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_below="@+id/TextView03"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAddressHint"
                android:inputType="textPostalAddress"
                android:maxLength="18"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_address"
                android:layout_alignRight="@+id/TextView03"
                android:layout_alignTop="@+id/register_address"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strUserAddressInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <com.dd.processbutton.FlatButton
                android:id="@+id/regist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_address"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="7.0px"
                pb_colorNormal="@android:color/holo_blue_light"
                pb_colorPressed="@android:color/holo_blue_dark"
                android:text="@string/regist" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>